deploy/inflated/apps_v1_deployment_gcpauthpolicyprofile-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: gcpauthpolicyprofile
    app.kubernetes.io/name: k8s-policy-controller
  name: gcpauthpolicyprofile-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: gcpauthpolicyprofile
      app.kubernetes.io/name: k8s-policy-controller
  template:
    metadata:
      labels:
        app: k8s-policy-controller
        app.kubernetes.io/instance: gcpauthpolicyprofile
        app.kubernetes.io/name: k8s-policy-controller
        instance: gcpauthpolicyprofile
    spec:
      containers:
      - $patch: merge
        args:
        - --namespace=$POD_NAMESPACE
        name: controller
      - args:
        - --kind=gcpauthpolicyprofile
        image: k8s-policy-controller:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: webhook-server
            scheme: HTTPS
        name: k8s-policy-controller
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: webhook-server
            scheme: HTTPS
        resources: {}
        securityContext: {}
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext: {}
      serviceAccountName: gcpauthpolicyprofile-controller
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: gcpauthpolicyprofile-controller-tls
