deploy/inflated/admissionregistration.k8s.io_v1beta1_mutatingwebhookconfiguration_nodepolicyprofile.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from-secret: policies/nodepolicyprofile-controller-tls
  labels:
    app.kubernetes.io/instance: nodepolicyprofile
    app.kubernetes.io/name: k8s-policy-controller
  name: nodepolicyprofile
webhooks:
- clientConfig:
    caBundle: ""
    service:
      name: nodepolicyprofile-controller
      namespace: default
      path: /mutate-v1-pod
      port: 443
  failurePolicy: Ignore
  name: nodepolicyprofile-controller.policies.svc.cluster.local
  objectSelector:
    matchExpressions:
    - key: app
      operator: NotIn
      values:
      - k8s-policy-controller
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
  timeoutSeconds: 5
